--- a/src/app/component/login/login.component.css
+++ b/src/app/component/login/login.component.css
@@ -1,5 +1,6 @@
 .login-container{
     text-align: center;
+    vertical-align: middle;
 }
 
 #form-container{
@@ -8,6 +9,7 @@
     border-radius: 10px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     width: 400px;
+    height: 300px;
 }
 
 #form-container form{
