--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -4,16 +4,18 @@
     <h1>LOGIN</h1>
     <p> {{loginForm.status}}</p>
     <div>
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" method="post">
         <label for="username">Username: </label>
         <input type="text" formControlName="username" id="username">
         <br>
         <label for="password">Password: </label>
-        <input type="text" formControlname="password" id="password">
+        <input type="text" formControlName="password" id="password">
         <br>
         <p>Complete the form to enable button</p>
-        <button type="submit" [disabled]="!loginForm.valid" routerLink="/dashboard">Submit</button>
+        <button mat-raised-button type="submit" [disabled]="!loginForm.valid" routerLink="/dashboard">Login</button>
       </form>
     </div>
   </div>
+  <p></p>
 </div>
+
